systemd: make sure strings also break if they are too long.
Closes #3836

--- a/pkg/systemd/journal.css
+++ b/pkg/systemd/journal.css
@@ -135,4 +135,5 @@
 /* Make sure to not break log message lines in order to preserve information */
 #journal-entry .cockpit-info-table td {
     white-space: normal;
+    word-break: break-all;
 }
